[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbleed-osint"
version = "0.3.0"
authors = [
  { name="Alpha-07 (Metis Labs)", email="intelligence.metislabs@gmail.com" },
]
description = "A command-line OSINT toolkit for identity discovery and correlation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=1.10.0,<2.0.0",
    "beautifulsoup4>=4.12.0",
    "fpdf>=1.7.2",
    "platformdirs>=4.0.0",
    ]

[project.scripts]
heartbleed = "heartbleed.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["heartbleed*"]
